<resources>
    <string name="app_name">Heartbeat</string>

    <string name="notification_permission">android.permission.POST_NOTIFICATIONS</string>
    <string name="title_notification_permission">Notifications</string>
    <string name="message_notification_permission">This app uses a persistent notification to show important information like the connection status.\nIn order to do this, it needs the notification permission.</string>
    <string name="ok">OK</string>
    <string name="i_dont_have_a_server">I don\'t have a server</string>

    <string name="heartbeat_first_run_title">Welcome to Heartbeat!</string>
    <string name="heartbeat_first_run_text">Heartbeat is an open source, self hosted user safety tracker.\nEssentially, on a fixed schedule, your device will produce a \"heartbeat\", that other trusted users will then receive, being thus able to know each other\'s status.\n\nNote: this app does NOT and will NEVER get/process/track ANY kind of location information.\n\nTo begin setup, enter your server hostname or IP address:</string>
    <string name="hostname">hostname</string>
    <string name="git_url">"http://github.com/adryzz/heartbeat"</string>

    <string name="title_home">Home</string>
    <string name="title_devices">Devices</string>
    <string name="title_events">Events</string>

    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="about">Made with &lt;3 by Lena\n\nhttp://lena.nihil.gay</string>

    <string name="fgs_notification_channel_id">PERSISTENT_NOTIFICATIONS</string>
    <string name="fgs_notification_channel_name">Persistent notification</string>
    <string name="fgs_notification_channel_description">Aorta connection persistent notification</string>
    <string name="fgs_notification_title">Heartbeat (%1$s)</string>
    <string name="fgs_notification_offline">Offline</string>
    <string name="fgs_notification_online">Online</string>
    <string name="fgs_notification_text_offline">Waiting for connection…</string>
    <string name="fgs_notification_text_online">%1$d/%2$d devices connected</string>


    <string name="alert_notification_channel_id">ALERTS</string>
    <string name="alert_notification_channel_name">Device alerts</string>
    <string name="alert_notification_channel_description">Alerts created by connected devices</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="connection_header">Connection</string>
    <string name="sync_header">Sync</string>
    <string name="data_header">Data</string>
    <string name="notifications_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="server">Server</string>

    <!-- Sync Preferences -->
    <string name="auto_heartbeat_timer_title">Delay between automatic heartbeats</string>

    <!-- Data Preferences -->
    <string name="remove_notifications_old_title">Purge events older than</string>
    <string name="use_exact_alarm_setting_name">Use an exact timer for heartbeats</string>
    <string name="use_exact_alarm_setting_summary">This guarantees firing, but may drain the battery quicker</string>

    <!-- Notifications Preferences -->
    <string name="receive_low_battery_notifications">Receive battery status notifications</string>
    <string name="receive_network_status_notifications">Receive network status notifications</string>
    <string name="receive_new_device_notifications">Receive new device notifications</string>
    <string name="receive_offline_reminders">Receive offline reminders</string>
    <string name="low_battery_notification_example">e.g. \"Device \'&lt;3\' has low battery!\"</string>
    <string name="network_status_notification_example">e.g. \"Device \'&lt;3\' just went offline!\"</string>
    <string name="new_device_added_notification_example">e.g. \"New device added to server!\"</string>
    <string name="offline_reminder_example">e.g. \"Your device has been offline for 1 hour!\"</string>
</resources>