<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/connection_header">

        <EditTextPreference
            app:key="server"
            app:title="@string/server"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/sync_header">

        <ListPreference
            app:key="auto_heartbeat_timer"
            app:title="@string/auto_heartbeat_timer_title"
            app:entries="@array/timer_entries"
            app:entryValues="@array/timer_values"
            app:defaultValue="300"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="use_exact_alarm"
            android:title="@string/use_exact_alarm_setting_name"
            android:summary="@string/use_exact_alarm_setting_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/notifications_header">
        <SwitchPreference
            android:defaultValue="true"
            android:key="receive_low_battery_notifications"
            android:title="@string/receive_low_battery_notifications"
            android:summary="@string/low_battery_notification_example"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="receive_network_status_notifications"
            android:title="@string/receive_network_status_notifications"
            android:summary="@string/network_status_notification_example"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="receive_new_device_notifications"
            android:title="@string/receive_new_device_notifications"
            android:summary="@string/new_device_added_notification_example"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="receive_offline_reminders"
            android:title="@string/receive_offline_reminders"
            android:summary="@string/offline_reminder_example"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/data_header">

        <ListPreference
            app:key="reply"
            app:title="@string/remove_notifications_old_title"
            app:entries="@array/notif_delete_entries"
            app:entryValues="@array/notif_delete_values"
            app:defaultValue="168"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>