<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/first_run_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heartbeat_first_run_title"
        android:textSize="24sp"
        android:paddingHorizontal="4dp"/>

    <TextView
        android:id="@+id/first_run_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heartbeat_first_run_text"
        android:textSize="16sp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"/>

    <EditText
        android:id="@+id/first_run_host"
        android:inputType="textWebEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hostname" />
</LinearLayout>